# lobster

./: .env.example  .gitignore  data  main.py  pyproject.toml  test.http
app/: __init__.py  config.py  crypto.py  db.py  llm.py
app/memory/: browser.py  chunker.py  embedder.py  graph_rag.py  parser.py  retriever.py  store.py
app/routes/: chat.py  memory.py
app/templates/: base.html  chat.html  memory.html
tests/: test_memory.py
