[project]
name = "lobster"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "aiosqlite>=0.20",
    "sse-starlette>=2.1",
    "sqlite-vec>=0.1",
]

[dependency-groups]
dev = [
    "jurigged>=0.6",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
