[project]
name = "lobster"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "aiosqlite>=0.20",
    "sse-starlette>=2.1",
    "sqlite-vec>=0.1",
    "jieba>=0.42",
    "sentence-transformers>=3.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "jurigged>=0.6",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }